--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <!-- Bootstrap CSS v5.2.1 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="Views/Css/Style.css">
+        <link rel="stylesheet" href="Views/Css/Global.css">
 
     </head>
 
@@ -18,7 +18,10 @@
         </header>
 
         <main class="Cuerpo">
+            <form action="Model/Function.php" method="post">
+                
 
+            </form>
 
         </main>
 
